--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "build": "npm run clean && gatsby build",
     "deploy": "npm run clean && gatsby build --prefix-paths && aws s3 //TODO",
     "clean": "rimraf .cache public",
-    "flow": "flow",
-    "lint:js": "eslint --cache --ext .js,.jsx .",
-    "lint:scss": "stylelint \"src/**/*.scss\"",
-    "lint": "concurrently \"npm run lint:js\" \"npm run lint:scss\" \"npm run flow\""
+    "lint:js": "eslint --config \"lint/.eslintrc.json\" --ignore-path \"lint/.eslintignore\" --ext .js,.jsx .",
+    "lint:scss": "stylelint --config \"lint/.stylelintrc.json\" \"src/**/*.scss\"",
+    "lint": "concurrently \"npm run lint:js\" \"npm run lint:scss\""
   },
   "repository": "https://gitlab.com/jbeckman/PersonalWebsite",
   "author": "Jonathan Beckman <jonathantbeckman@gmail.com>",
@@ -25,7 +24,6 @@
     "gatsby-link": "^2.4.13",
     "gatsby-plugin-catch-links": "^2.3.11",
     "gatsby-plugin-feed": "^2.5.11",
-    "gatsby-plugin-flow": "^1.3.11",
     "gatsby-plugin-google-gtag": "^2.1.10",
     "gatsby-plugin-manifest": "^2.4.22",
     "gatsby-plugin-netlify": "^2.3.11",
@@ -64,7 +62,6 @@
     "@babel/core": "7.10.5",
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/plugin-proposal-optional-chaining": "7.10.4",
-    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/preset-env": "7.10.4",
     "@babel/preset-react": "7.10.4",
     "autoprefixer": "9.8.6",
@@ -81,9 +78,6 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.3",
     "eslint-watch": "7.0.0",
-    "flow-bin": "^0.129.0",
-    "flow-typed": "^3.2.1",
-    "gh-pages": "3.1.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.2.1",
     "jest-cli": "26.2.1",
