--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "develop": "npm run clean && gatsby develop",
     "build": "npm run clean && gatsby build",
     "deploy": "npm run clean && gatsby build --prefix-paths && aws s3 //TODO",
-    "clean": "rimraf .cache public",
+    "clean": "rimraf .cache public .lighthouseci",
     "lint:js": "eslint --config \"lint/.eslintrc.json\" --ignore-path \"lint/.eslintignore\" --ext .js,.jsx .",
     "lint:scss": "stylelint --config \"lint/.stylelintrc.json\" \"src/**/*.scss\"",
-    "lint": "concurrently \"npm run lint:js\" \"npm run lint:scss\""
+    "lint": "concurrently \"npm run lint:js\" \"npm run lint:scss\"",
+    "lighthouse": "lhci autorun --collect.start-server-command=\"gatsby serve\" --collect.url=http://localhost:9000/ --collect.settings.chromeFlags=\"--no-sandbox\" --upload.target=filesystem --upload.outputDir=.lighthouseci"
   },
   "repository": "https://gitlab.com/jbeckman/PersonalWebsite",
   "author": "Jonathan Beckman <jonathantbeckman@gmail.com>",
@@ -60,6 +61,7 @@
     "@babel/plugin-proposal-optional-chaining": "7.10.4",
     "@babel/preset-env": "7.10.4",
     "@babel/preset-react": "7.10.4",
+    "@lhci/cli": "0.6.1",
     "autoprefixer": "9.8.6",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
@@ -74,6 +76,7 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.3",
     "eslint-watch": "7.0.0",
+    "gatsby-cli": "2.12.109",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.2.1",
     "jest-cli": "26.2.1",
