Refactor to removed redundant post metadata

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "develop": "npm run clean && gatsby develop",
     "build": "npm run clean && gatsby build",
+    "serve": "npm run build && gatsby serve",
     "clean": "rimraf .cache public .lighthouseci",
     "lint:js": "eslint --config \"lint/.eslintrc.json\" --ignore-path \"lint/.eslintignore\" --ext .js,.jsx .",
     "lint:scss": "stylelint --config \"lint/.stylelintrc.json\" \"src/**/*.scss\"",
