--- a/package.json
+++ b/package.json
@@ -20,71 +20,72 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "classnames": "^2.2.6",
-    "codecov": "^3.7.2",
-    "gatsby": "^2.24.33",
-    "gatsby-link": "^2.4.13",
-    "gatsby-plugin-catch-links": "^2.3.11",
-    "gatsby-plugin-feed": "^2.5.11",
-    "gatsby-plugin-google-gtag": "^2.1.10",
-    "gatsby-plugin-manifest": "^2.4.22",
-    "gatsby-plugin-offline": "^3.2.22",
-    "gatsby-plugin-optimize-svgs": "^1.0.4",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-sharp": "^2.6.25",
-    "gatsby-plugin-sitemap": "^2.4.11",
-    "gatsby-remark-autolink-headers": "^2.3.11",
-    "gatsby-remark-copy-linked-files": "^2.3.12",
+    "codecov": "^3.8.1",
+    "gatsby": "^2.30.2",
+    "gatsby-link": "^2.9.0",
+    "gatsby-plugin-catch-links": "^2.8.0",
+    "gatsby-plugin-feed": "^2.11.0",
+    "gatsby-plugin-google-gtag": "^2.6.0",
+    "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-offline": "^3.8.0",
+    "gatsby-plugin-optimize-svgs": "^1.0.5",
+    "gatsby-plugin-postcss": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^3.8.0",
+    "gatsby-plugin-sass": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.12.1",
+    "gatsby-plugin-sitemap": "^2.10.0",
+    "gatsby-remark-autolink-headers": "^2.9.0",
+    "gatsby-remark-copy-linked-files": "^2.8.0",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^3.3.25",
-    "gatsby-remark-prismjs": "^3.5.10",
-    "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-remark-responsive-iframe": "^2.4.12",
-    "gatsby-remark-smartypants": "^2.3.10",
-    "gatsby-source-filesystem": "^2.3.24",
-    "gatsby-transformer-remark": "^2.8.28",
-    "gatsby-transformer-sharp": "^2.5.12",
+    "gatsby-remark-images": "^3.9.0",
+    "gatsby-remark-prismjs": "^3.11.0",
+    "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-remark-responsive-iframe": "^2.9.0",
+    "gatsby-remark-smartypants": "^2.8.0",
+    "gatsby-source-filesystem": "^2.9.0",
+    "gatsby-transformer-remark": "^2.14.0",
+    "gatsby-transformer-sharp": "^2.10.1",
     "invariant": "^2.2.4",
-    "lodash": "^4.17.19",
-    "moment": "^2.27.0",
-    "node-sass": "^4.14.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "node-sass": "^5.0.0",
     "normalize-scss": "^7.0.1",
-    "prismjs": "^1.21.0",
-    "react": "^16.13.1",
-    "react-disqus-comments": "^1.4.0",
-    "react-dom": "^16.13.1",
+    "postcss": "^8.2.4",
+    "prismjs": "^1.23.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.10.5",
-    "@babel/plugin-proposal-class-properties": "7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "7.10.4",
-    "@babel/preset-env": "7.10.4",
-    "@babel/preset-react": "7.10.4",
+    "@babel/core": "7.12.10",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "7.12.7",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "7.12.10",
     "@lhci/cli": "0.6.1",
     "autoprefixer": "9.8.6",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
-    "babel-jest": "26.2.1",
-    "babel-preset-gatsby": "0.5.5",
-    "browserslist": "4.13.0",
-    "concurrently": "5.2.0",
-    "eslint": "7.5.0",
-    "eslint-config-airbnb-base": "14.2.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jest": "23.18.0",
-    "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "7.20.3",
+    "babel-jest": "26.6.3",
+    "babel-preset-gatsby": "0.10.0",
+    "browserslist": "4.16.1",
+    "concurrently": "5.3.0",
+    "eslint": "7.17.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.3",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.22.0",
     "eslint-watch": "7.0.0",
-    "gatsby-cli": "2.12.109",
+    "gatsby-cli": "2.17.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.2.1",
-    "jest-cli": "26.2.1",
+    "jest": "26.6.3",
+    "jest-cli": "26.6.3",
     "lost": "8.3.1",
     "postcss-pxtorem": "5.1.1",
-    "react-test-renderer": "16.13.1",
+    "react-test-renderer": "16.14.0",
     "rimraf": "3.0.2",
-    "stylelint": "13.6.1",
+    "stylelint": "13.8.0",
     "stylelint-config-recommended-scss": "4.2.0",
     "stylelint-scss": "3.18.0"
   }
