--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby": "^2.30.2",
     "gatsby-link": "^2.9.0",
     "gatsby-plugin-catch-links": "^2.8.0",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed": "^2.11.0",
     "gatsby-plugin-google-gtag": "^2.6.0",
     "gatsby-plugin-manifest": "^2.10.0",
