--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-plugin-optimize-svgs": "^1.0.5",
     "gatsby-plugin-postcss": "^3.5.0",
     "gatsby-plugin-react-helmet": "^3.8.0",
+    "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-plugin-sharp": "^2.12.1",
     "gatsby-plugin-sitemap": "^2.10.0",
