--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "3.0.5",
+  "version": "3.1.1",
   "name": "jb-personal-website",
   "description": "A minimal, lightweight, and mobile-first blog and personal website",
   "main": "n/a",
@@ -19,76 +19,76 @@
   "keywords": [],
   "dependencies": {
     "bluebird": "^3.7.2",
-    "classnames": "^2.2.6",
-    "codecov": "^3.8.1",
-    "gatsby": "^2.30.2",
-    "gatsby-link": "^2.9.0",
-    "gatsby-plugin-catch-links": "^2.8.0",
+    "classnames": "^2.3.1",
+    "codecov": "^3.8.2",
+    "gatsby": "^4.3.0",
+    "gatsby-link": "^4.3.0",
+    "gatsby-plugin-catch-links": "^4.3.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
-    "gatsby-plugin-feed": "^2.11.0",
-    "gatsby-plugin-google-gtag": "^2.6.0",
-    "gatsby-plugin-manifest": "^2.10.0",
-    "gatsby-plugin-offline": "^3.8.0",
+    "gatsby-plugin-feed": "^4.3.0",
+    "gatsby-plugin-google-gtag": "^4.3.0",
+    "gatsby-plugin-manifest": "^4.3.0",
+    "gatsby-plugin-offline": "^5.3.0",
     "gatsby-plugin-optimize-svgs": "^1.0.5",
-    "gatsby-plugin-postcss": "^3.5.0",
-    "gatsby-plugin-react-helmet": "^3.8.0",
-    "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sass": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.12.1",
-    "gatsby-plugin-sitemap": "^2.10.0",
-    "gatsby-remark-autolink-headers": "^2.9.0",
-    "gatsby-remark-copy-linked-files": "^2.8.0",
+    "gatsby-plugin-postcss": "^5.3.0",
+    "gatsby-plugin-react-helmet": "^5.3.0",
+    "gatsby-plugin-robots-txt": "^1.6.14",
+    "gatsby-plugin-sass": "^5.3.0",
+    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-plugin-sitemap": "^5.3.0",
+    "gatsby-remark-autolink-headers": "^5.3.0",
+    "gatsby-remark-copy-linked-files": "^5.3.0",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^3.9.0",
-    "gatsby-remark-prismjs": "^3.11.0",
+    "gatsby-remark-images": "^6.3.0",
+    "gatsby-remark-prismjs": "^6.3.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "^2.9.0",
-    "gatsby-remark-smartypants": "^2.8.0",
-    "gatsby-source-filesystem": "^2.9.0",
-    "gatsby-transformer-remark": "^2.14.0",
-    "gatsby-transformer-sharp": "^2.10.1",
+    "gatsby-remark-responsive-iframe": "^5.3.0",
+    "gatsby-remark-smartypants": "^5.3.0",
+    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-transformer-remark": "^5.3.0",
+    "gatsby-transformer-sharp": "^4.3.0",
     "invariant": "^2.2.4",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "node-sass": "^5.0.0",
     "normalize-scss": "^7.0.1",
-    "postcss": "^8.2.4",
-    "prismjs": "^1.23.0",
+    "postcss": "^8.4.4",
+    "prismjs": "^1.25.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/plugin-proposal-class-properties": "7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "7.12.7",
-    "@babel/preset-env": "7.12.11",
-    "@babel/preset-react": "7.12.10",
-    "@lhci/cli": "0.6.1",
-    "autoprefixer": "9.8.6",
+    "@babel/core": "7.16.0",
+    "@babel/plugin-proposal-class-properties": "7.16.0",
+    "@babel/plugin-proposal-optional-chaining": "7.16.0",
+    "@babel/preset-env": "7.16.4",
+    "@babel/preset-react": "7.16.0",
+    "@lhci/cli": "0.8.2",
+    "autoprefixer": "10.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
-    "babel-jest": "26.6.3",
-    "babel-preset-gatsby": "0.10.0",
-    "browserslist": "4.16.1",
-    "concurrently": "5.3.0",
-    "eslint": "7.17.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jest": "24.1.3",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.22.0",
-    "eslint-watch": "7.0.0",
-    "gatsby-cli": "2.17.1",
+    "babel-jest": "27.4.4",
+    "babel-preset-gatsby": "2.3.0",
+    "browserslist": "4.18.1",
+    "concurrently": "6.4.0",
+    "eslint": "8.4.1",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jest": "25.3.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.27.1",
+    "eslint-watch": "8.0.0",
+    "gatsby-cli": "4.3.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.6.3",
-    "jest-cli": "26.6.3",
+    "jest": "27.4.4",
+    "jest-cli": "27.4.4",
     "lost": "8.3.1",
     "postcss-pxtorem": "5.1.1",
     "react-test-renderer": "16.14.0",
     "rimraf": "3.0.2",
-    "stylelint": "13.8.0",
-    "stylelint-config-recommended-scss": "4.2.0",
-    "stylelint-scss": "3.18.0"
+    "sass": "^1.45.0",
+    "stylelint": "14.1.0",
+    "stylelint-config-recommended-scss": "5.0.2",
+    "stylelint-scss": "4.0.1"
   }
 }
