Improved linting. Fixed most of issues stemming from that. Still a few more to go

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "npm run clean && gatsby build",
     "serve": "npm run build && gatsby serve",
     "clean": "rimraf .cache public .lighthouseci",
-    "lint:js": "eslint --config \"lint/.eslintrc.json\" --ignore-path \"lint/.eslintignore\" --ext .js,.jsx .",
-    "lint:scss": "stylelint --config \"lint/.stylelintrc.json\" \"src/**/*.scss\"",
-    "lint": "concurrently \"npm run lint:js\" \"npm run lint:scss\"",
+    "lint:es": "eslint --config \".eslintrc.json\" --ignore-path \".eslintignore\" .",
+    "lint:scss": "stylelint --config \".stylelintrc.json\" \"src/**/*.scss\"",
+    "lint": "concurrently \"npm run lint:es\" \"npm run lint:scss\"",
     "lighthouse": "lhci collect"
   },
   "repository": "https://gitlab.com/jbeckman/PersonalWebsite",
@@ -50,6 +50,7 @@
     "invariant": "^2.2.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
     "normalize-scss": "^7.0.1",
     "postcss": "^8.4.4",
     "prismjs": "^1.25.0",
@@ -59,24 +60,27 @@
   },
   "devDependencies": {
     "@babel/core": "7.16.0",
+    "@babel/eslint-parser": "7.16.5",
     "@babel/plugin-proposal-class-properties": "7.16.0",
     "@babel/plugin-proposal-optional-chaining": "7.16.0",
     "@babel/preset-env": "7.16.4",
     "@babel/preset-react": "7.16.0",
     "@lhci/cli": "0.8.2",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "autoprefixer": "10.4.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.1.0",
     "babel-jest": "27.4.4",
     "babel-preset-gatsby": "2.3.0",
     "browserslist": "4.18.1",
     "concurrently": "6.4.0",
     "eslint": "8.4.1",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-plugin-import": "2.25.3",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "25.3.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.27.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-watch": "8.0.0",
     "gatsby-cli": "4.3.0",
     "identity-obj-proxy": "3.0.0",
