--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "prismjs": "^1.25.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "7.16.5",
